add new project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,170 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
-    <h1>Hello Armenia</h1>
-    
+<header>
+    <div class="container rowFlex">
+        <div>
+            <h1>MyWebsite</h1>
+        </div>
+        <nav>
+            <span>
+                <i class="fa fa-bars iconmenu"></i>
+            </span>
+            <ul class="nav-bar">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<div class="container">
+    <section id="home">
+       <div class="text-info">
+           <h2>Home page information</h2>
+           <p>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam aperiam beatae dolores eaque, ex excepturi facere impedit in iure laborum laudantium nulla numquam repellat tempore temporibus veniam veritatis voluptas.
+           </p>
+       </div>
+    </section>
+    <section id="about">
+            <div class="aboutImages">
+                <img src="https://hiwalk.in/resources/media/1657958812_About-Us-main_0.png" alt="">
+            </div>
+            <div class="aboutInformation">
+                <h2>About <span>us</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consectetur corporis cum dignissimos dolore eos ex harum illo, illum incidunt laudantium nisi, perferendis quaerat repudiandae sint ullam vel veniam voluptatem!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consectetur corporis cum dignissimos dolore eos ex harum illo, illum incidunt laudantium nisi, perferendis quaerat repudiandae sint ullam vel veniam voluptatem!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consectetur corporis cum dignissimos dolore eos ex harum illo, illum incidunt laudantium nisi, perferendis quaerat repudiandae sint ullam vel veniam voluptatem!</p>
+            </div>
+    </section>
+</div>
+<section class="ourMission">
+    <div class="container rowFlex ">
+        <div class="box">
+            <i class="fa fa-user"></i>
+            <h3>300</h3>
+        </div>
+        <div class="box">
+            <i class="fa fa-support"></i>
+            <h3>24/7</h3>
+        </div>
+        <div class="box">
+            <i class="fa fa-credit-card"></i>
+            <h3>5000</h3>
+        </div>
+        <div class="box">
+            <i class="fa fa-eye"></i>
+            <h3>8000000</h3>
+        </div>
+    </div>
+</section>
+<div class="container">
+    <section id="priceList">
+        <h2>Price List</h2>
+        <div class="rowFlex">
+            <div class="box">
+                <div class="priceName">
+                    <h4>Business</h4>
+                    <span>5000$</span>
+                </div>
+                <div class="priceItemskillList">
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="priceName">
+                    <h4>Business</h4>
+                    <span>5000$</span>
+                </div>
+                <div class="priceItemskillList">
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="priceName">
+                    <h4>Business</h4>
+                    <span>5000$</span>
+                </div>
+                <div class="priceItemskillList">
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="priceName">
+                    <h4>Business</h4>
+                    <span>5000$</span>
+                </div>
+                <div class="priceItemskillList">
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                    <p>Lorem ipsum dolor sit</p>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+<footer>
+
+</footer>
 </body>
 </html>
