--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
     <div class="container rowFlex">
         <div>
-            <h1>MyWebsite</h1>
+            <h1>New Web site</h1>
         </div>
         <nav>
             <span>
